[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
#chrono = "0.4.23"
# serde = "1.0.152"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = "1.25.0"



# [dependencies]
# actix-web = "4"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.64"
# swagger = "0.14.0"
# swagger-actix-web = "0.14.0"
# thiserror = "1.0.24"
# tokio = { version = "1.16.1", features = ["full"] }

# [dependencies.openapi]
# version = "0.19.0"
# features = ["yaml"]